# boston-bike-safety

./: .gitignore  README.md  pyproject.toml
.github/workflows/: nightly.yml
models/: metrics_history.jsonl
src/: build_graph.py  build_readme.py  build_site.py  download_data.py  explore_streets.py  pipeline.py  train_gnn.py
